<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">PayFive!</string>

    <string-array name="drawer_menu">
        <item>New Transaction</item>
        <item>Scan to Pay</item>
        <item>History</item>
        <item>About</item>
        <item>Admin Menu</item>
        <item>Customer Menu</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="progress_loading_title">Loading&#8320;</string>
    <string name="progress_loading_msg">Login is possible in a few seconds</string>
    <string name="toast_login_ok">Logged in</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="login_description">This enables the user to use his PayPal credentials to login. Thus he doesn\'t have to create yet another account and remember yet another password.</string>
    <string name="login_oauth">OAuth 2.0</string>
    <string name="login_openid">OpenID</string>
    <string name="hello_world">Hello World</string>
    <string name="activity_item_menu">ItemMenuActivity</string>
    <string name="activity_add_item">AddItemActivity</string>
    <string name="activity_customer_view">CustomerViewActivity</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">Name</string>
    <string name="item_price">Price</string>
    <string name="item_visibility">Display to customers?</string>
    <string name="item_picture">Add Picture</string>
    <string name="item_category">Category</string>
    <string name="item_description">Description</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="menu_view">View</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_customer_view">Customer View</string>

</resources>