<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   	<item android:id="@+id/iACustomerView"  
	      android:title="@string/menu_customer_view" 
	      android:showAsAction="ifRoom" />  
	    
    <item android:id="@+id/iAAdd"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/action_add"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/iASort"
          android:icon="@android:drawable/ic_menu_sort_alphabetically"
          android:title="@string/action_sort"
    	  android:showAsAction="never" />
    <!--         android:showAsAction="ifRoom" /> -->
    	
    <!-- Search, should appear as action button -->
    <item android:id="@+id/iASearch"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_search"
          android:showAsAction="never" />
    <!--  android:showAsAction="ifRoom" />  -->
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/iASettings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
</menu>
